css/custom.css
/* ... */
i:hover {
  color: #FBC02D;
  text-decoration: none;
}

.about-img{
  position: relative;
  height: 200px;
}

.right{
  text-align: right;
}

iframe{
background-color: #121212;
color:white;
width:100%;
height:300%;
padding:0px;
box-sizing: content-box;
}

form-box{
  width: 100%;
}

.underline{
  text-decoration: underline;
}

/*Text coloring*/
.gold{color: #FBC02D;}

.yellow{color: #FFF59D;}

.red{color: #EF9A9A;}

.blue{color: #90CAF9;}

.green{color:#5DBE23;}

.teal {color: #009688}

.bggrey {
  background-color: #121212;
  background: rgba(0,0,0,0);
  color: #121212;
}

.lightgrey {color: #303030}

.view-all{
  border-color: #FBC02D;
  color: #FBC02D;
}
/*Autofill Settings––––––––––––––––––––––––––––––––––––––––––––––––––-*/
input:-webkit-autofill,
input:-webkit-autofill:hover,
input:-webkit-autofill:focus,
input:-webkit-autofill:active  {
    -webkit-box-shadow: 0 0 0 30px #121212 inset !important;
    -webkit-text-fill-color: white !important;
}

/*Images––––––––––––––––––––––––––––––––––––––––––––––––––-*/
figcaption {
  font-size: 0.7em;
  font-weight: 300;
  color: #BDBDBD;
}

/*Project Specific Codes––––––––––––––––––––––––––––––––––––––––––––––––––-*/

.project_hero{
  background-position: center top;
  background-repeat: no-repeat;
  background-size: cover;
  min-height: 250px;
}

.laptop {
  display: block;
}

.container.mobile {
  margin-top: 15%;
  display: none;
}

.one-fifth.column{
width:20%;
/*margin-top: 2.5%;*/
margin-left: 0px;
text-align: center;
}

.one-fifth.column li{
  margin: 0px;
  padding: 0px;
}

.project{
  margin-top: 2%;
  height: 450px;
}

.blocbox_bg {
  background-image: radial-gradient(circle, black, transparent), url(../images/blocbox/blocbox_bg0.25.png);
}

.filo_bg {
  background-image: radial-gradient(circle, black, transparent), url(../images/filo/filo_bg0.25.png);
}

.project_logo{
  width: 25%;
  background-color: black;
  background: rgba(0,0,0, .5);
}

.three.columns{
  text-align: center;
  background-size: cover;
}

.mobile_row{
  display: none;
}

.column_background{
  background-color: #313131;
  height: 250px;
  margin-top: -10px;
}

.research {
    background: url(../images/casestudy/books.jpg);
}

.infoarchi {
    background: url(../images/casestudy/drawers.jpg);
}

.branding {
    background: url(../images/casestudy/type.jpg);
}

.visualdesign {
    background: url(../images/casestudy/me_design-v2.jpg);
}

.testing {
    background: url(../images/casestudy/3phones.jpg);
}

.background{
  position:relative;
  height: 250px;
  overflow: hidden;
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
  margin-top: 2%;
}

.section-text h3{
  /*position:relative;*/
  padding: 20px 20px;
  background-color: black;
  background: rgba(0,0,0, .5);
  margin: 80px 0px 0px;
  text-align: center;
}

.center{
  margin-top: 10%;
  /*padding: 0px 0px;*/
  text-align: center;
}

.subsection{
  margin-top: 10%
}

.subcontainer{
  width: 100%;
  background-color: #303030;
}

.centered-persona{
  margin: 10% 1%;
  text-align: center;
}

.survey{
  margin-top: -7.5%;
}

.list li {
  text-decoration: none;
  list-style: square;
  display: list-item;
  margin: 2px 2px 2px 40px;
  line-height: 1.5em;
  padding-left: 2px;
  padding-right: 0;
}

.num li{
  list-style: decimal;
}

.persona li{
  margin: 10px 0px 0px 15px;
}

/*Filo Laptop ––––––––––––––––––––––––––––––––––––––––––––––––––-*/
.filo_hero{
  background-image:url(../images/filo/filo_7screens.png);
}

/*Blocbox Laptop ––––––––––––––––––––––––––––––––––––––––––––––––––-*/

.blocbox_hero{
  background-image:url(../images/blocbox/bb_showcase-v3.png);
  background-position: center;
  background-repeat: no-repeat;
  background-size: contain;
}

.bb_logo {
  width: 40%;
}

.four.columns.subsection.centered-persona{
  width:31%;
}

.one_column_logos{
  width: 60%;
  margin: 0 20%;
}

.justified {
  text-align:
}

.button.laptop_view {
  display: inline-block;
}

.button.mobile_view {
  display: none;
}

.text_image {
  text-align: left;
  padding: 10px 10px;
}

.light{
  background-color: #303030;
}

.dark{
  background-color: #303030;
}

.text_image h6{
  font-weight: bold;
  margin: auto 60px;
}


.text_image li {
  text-decoration: none;
  list-style: square inside;
  display: list-item;
  margin: 2px 2px 0px 100px;
  font-size: 80%;
  line-height: 1.5em;
  padding-left: 2px;
  padding-right: 0;
}

.nomargincol {
 margin: 0;
}

.mobgrid {
  display: grid;
  max-width: 47%;
  margin-right: 3%;
}

.mobgrid li, .mobgrid h6{
  margin: 0;
}

.mobgrid p{
  font-size: 80%;
}

.text_image li {
  list-style: square;
}

.indent li{
  margin-left: 15px;
}

.tasks h5{
  font-weight: bold;
}

.tasks h5, .tasks p{
  text-align: center;
}

.h5a {
  font-size: 2rem;
}

ul.footnav{
  float: right;
}

/*Home Health Laptop ––––––––––––––––––––––––––––––––––––––––––––––––––-*/
.homehealth_bg {
  background-image: radial-gradient(circle, black, transparent), url(../images/homehealth/homehealth_bg0.25.png);
}

.hh_hero{
  background-image: url(../images/homehealth/hh_hero.png);
}

.hh_logo{
  width: 60%;
}

.video        {width:80%;height:100%;margin:0 auto;background:#CCC}
.iframe1        {position:relative;}
.iframe1 .ratio {display:block;width:100%;height:auto;}
.iframe1 iframe {position:absolute;top:0;left:0;width:100%; height:100%;}

/*Blog Laptop ––––––––––––––––––––––––––––––––––––––––––––––––––-*/
.blog{
  margin-top: 10%;
}

.blog_featured{
  border: solid white 5px;
  border-radius: 4px;
  padding: 15px;
}

.blog_bk_img{
  position: absolute;
  top: 8px;
  left: 16px;
}

.blog_container{
  border: solid grey 3px;
  border-radius: 4px;
  position: relative;
  max-width: 500px;
  margin-top: 5%;
  box-sizing: border-box;
}

.blog_container img{
  width: 100%;
  height: 250px;
  /*height: 100%;*/
}

.date{
  font-style: italic;
  color: grey;
}


/* Animation –––––––––––––––––––––––––––––––––––––––––––––––––– */
.ellipsis{
  animation-iteration-count: infinite;
}
/* ... */

